# pyspark-data-sources

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cursor/skills/add-data-source/: SKILL.md  TEMPLATE.md
.cursor/skills/create-data-source/: SKILL.md  checklist.md  templates.md
.github/workflows/: ci.yml  docs.yml
contributing/: DEVELOPMENT.md  RELEASE.md
datasources/fake/: index.html
datasources/github/: index.html
datasources/googlesheets/: index.html
datasources/huggingface/: index.html
datasources/kaggle/: index.html
datasources/simplejson/: index.html
datasources/stock/: index.html
docs/: api-reference.md  building-data-sources.md  data-sources-guide.md  index.md  simple-stream-reader-architecture.md
docs/datasources/: arrow.md  fake.md  github.md  googlesheets.md  huggingface.md  jira.md  jsonplaceholder.md  kaggle.md  lance.md  meta_capi.md  opensky.md  pokemon.md  robinhood.md  salesforce.md  sftp.md  sharepoint.md  simplejson.md  spotify.md  stock.md  weather.md
docs/design/: jira_connector.md  oracle_connector.md  qdrant_connector.md  sftp_connector.md
examples/: README.md  advice.md  agify.md  arrow.md  azuregraph.md  bored.md  cocktail.md  coindesk.md  dockerhub.md  dog.md  excel.md  fake.md  fakestore.md  ghibli.md  github.md  googlesheets.md  httpbin.md  huggingface.md  ipapi.md  jira.md  jsonlines.md  jsonplaceholder.md  kaggle.md  lance.md  meta_capi.md  meta_capi_example.py  metmuseum.md  nasa.md  notion.md  openfda.md  opensky.md  oracle.md  picsum.md  pokemon.md  pypi.md  qdrant.md  quotable.md  randomuser.md  reddit.md  reqres.md  (+16 more)
pyspark_datasources/: README.md  __init__.py  advice.py  agify.py  arrow.py  azuregraph.py  bored.py  cocktail.py  coindesk.py  dockerhub.py  dog.py  excel.py  fake.py  fakestore.py  ghibli.py  github.py  googlesheets.py  httpbin.py  huggingface.py  ipapi.py  jira.py  jsonlines.py  jsonplaceholder.py  kaggle.py  lance.py  meta_capi.py  metmuseum.py  nasa.py  notion.py  openfda.py  opensky.py  oracle.py  picsum.py  pokemon.py  pypi.py  qdrant.py  quotable.py  randomuser.py  reddit.py  reqres.py  (+16 more)
search/: search_index.json
tests/: create_test_data.py  test_advice.py  test_agify.py  test_arrow_datasource.py  test_arrow_datasource_updated.py  test_azuregraph.py  test_bored.py  test_cocktail.py  test_coindesk.py  test_data_sources.py  test_dockerhub.py  test_dog.py  test_excel.py  test_fakestore.py  test_ghibli.py  test_github.py  test_google_sheets.py  test_httpbin.py  test_ipapi.py  test_jira.py  test_jsonlines.py  test_meta_capi.py  test_metmuseum.py  test_nasa.py  test_notion.py  test_openfda.py  test_oracle.py  test_picsum.py  test_pokemon.py  test_pypi.py  test_qdrant.py  test_quotable.py  test_randomuser.py  test_reddit.py  test_reqres.py  test_restcountries.py  test_robinhood.py  test_rss.py  test_salesforce_sink.py  test_sftp.py  (+5 more)
tests/data/: employees.arrow  products.parquet
tests/data/sales/: sales_q1.arrow  sales_q2.arrow  sales_q3.arrow
